--- a/styles/style.css
+++ b/styles/style.css
@@ -57,10 +57,10 @@ ol {
 .content {
 	display: flex;
 	align-items: end;
+	/* width: 1155px; */
 	justify-content: center;
-	width: 1140px;
-	gap: 30px;
-	height: 534px;
+	height: 543px;
+	/* gap: 35px; */
 }
 
 .search-form {
@@ -69,24 +69,26 @@ ol {
 	gap: 40px;
 	align-items: start;
 	width: 711px;
+	margin-right: 30px;
 }
 
 .content__list-container {
-	overflow-y: auto;
-	overflow-x: hidden;
+	overflow: auto;
 	display: grid;
 	gap: 30px;
-	max-height: 534px;
 	position: relative;
 }
 
 .content__details {
+	width: 100%;
+	display: grid;
 	height: 100%;
 	display: grid;
-	gap: 30px;
+	gap: 22px;
 }
 
 .content__video-card {
+	box-sizing: border-box;
 	display: flex;
 	align-items: start;
 	max-width: 399px;
@@ -119,6 +121,10 @@ ol {
 	height: 103px;
 }
 .content__video-card-description {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 4;
+	line-clamp: 4;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
@@ -130,15 +136,14 @@ ol {
 .search-form__fieldset-title {
 	font-family: 'Fira Sans Condensed', sans-serif;
 	font-weight: 400;
-	font-style: Regular;
 	font-size: 18px;
 	line-height: 100%;
 }
 
 .title {
+	padding-top: 10px;
 	font-family: Oswald, sans-serif;
 	font-weight: 700;
-	font-style: Bold;
 	font-size: 75px;
 	line-height: 94%;
 	text-transform: uppercase;
@@ -153,16 +158,15 @@ ol {
 	text-decoration: none;
 	font-family: 'Fira Sans Condensed', sans-serif;
 	font-weight: 400;
-	font-style: Regular;
 	font-size: 18px;
 	color: #ffffff;
 	white-space: nowrap;
+	line-height: 1.2;
 }
 
 .content__video-card-title {
 	font-family: Oswald, sans-serif;
 	font-weight: 700;
-	font-style: Bold;
 	font-size: 30px;
 	text-transform: uppercase;
 	overflow: hidden;
@@ -197,23 +201,21 @@ ol {
 .search-form__textfield {
 	margin-top: 5px;
 	background: transparent;
-	border: 1px solid white;
+	border: 1px solid currentColor;
 	border-left: 0;
 	border-right: 0;
 	width: 227px;
 	height: 27px;
-	font-family: Fira Sans Condensed;
+	font-family: 'Fira Sans Condensed', sans-serif;
 	font-weight: 400;
-	font-style: Regular;
 	font-size: 18px;
 	color: white;
 	appearance: none;
 }
 
 .search-form__textfield::placeholder {
-	font-family: Fira Sans Condensed;
+	font-family: 'Fira Sans Condensed', sans-serif;
 	font-weight: 400;
-	font-style: Regular;
 	font-size: 18px;
 	color: rgb(255 255 255 / 0.7);
 }
@@ -254,14 +256,13 @@ ol {
 }
 
 .button {
-	font-family: Fira Sans Condensed;
+	font-family: 'Fira Sans Condensed', sans-serif;
 	font-weight: 700;
-	font-style: Bold;
 	font-size: 18px;
 	text-align: center;
 	color: white;
 	background: transparent;
-	border: 1px solid white;
+	border: 1px solid currentColor;
 }
 
 .more-button {
@@ -284,11 +285,11 @@ ol {
 	background-color: #545050;
 }
 
-.content__card-link_current:hover {
+.content__card-link:hover {
 	text-decoration: underline;
 }
 
-.content__card-link_current {
+.content__card-link:active {
 	background-color: #545050;
 }
 
